--- a/ben-klea/photographs/sunrise-at-yant-flat.html
+++ b/ben-klea/photographs/sunrise-at-yant-flat.html
@@ -17,6 +17,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400|Wire+One" rel="stylesheet">
 <link href="../../styles/styles.css" rel="stylesheet" type="text/css">
 
+
 </head>
   <body>
 	<div class="unsplash-header">
@@ -25,7 +26,7 @@
 		</div>
 	</div>
 
-	<div class="container">
+<div class="container">
 	
 <nav class="unsplash-navigation">
   <ol class="breadcrumb">
@@ -122,7 +123,7 @@
 		</div>
       </div> 
       <div class="modal-footer">
-		<a href="https://unsplash.com/photos/jSEEU7QyzaA" target="_blank">Photo Source</a>
+		<a href="https://unsplash.com/photos/jSEEU7QyzaA" target="_blank" class="btn btn-primary btn-small"><i class="fas fa-image"></i>Photo Source</a>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
